# o3de-atom-sampleviewer

./: .automatedtesting.json  .gitignore  CMakeLists.txt  project.json  repo.json
Gem/: CMakeLists.txt  gem.json
Gem/Code/: CMakeLists.txt  atomsampleviewergem_private_files.cmake  enabled_gems.cmake
Gem/Code/Source/: MeshAnalyzerComponent.cpp  MeshAnalyzerComponent.h  MeshletsExampleComponent.cpp  MeshletsExampleComponent.h  ParallaxMappingExampleComponent.cpp  ParallaxMappingExampleComponent.h  ProceduralSkinnedMesh.cpp  ProceduralSkinnedMesh.h  ProceduralSkinnedMeshUtils.cpp  ProceduralSkinnedMeshUtils.h  SSRExampleComponent.cpp  SSRExampleComponent.h  SampleComponentManager.cpp  SampleComponentManager.h  SampleComponentManagerBus.h  ShadowExampleComponent.cpp  ShadowExampleComponent.h  SkinnedMeshExampleComponent.cpp  SponzaBenchmarkComponent.cpp  XRRPIExampleComponent.cpp  XRRPIExampleComponent.h
Gem/Code/Source/Automation/: ScriptManager.cpp  ScriptManager.h  ScriptReporter.cpp
Gem/Code/Source/RHI/: BasicRHIComponent.h  BindlessPrototypeExampleComponent.cpp  ComputeExampleComponent.cpp  MeshShaderExampleComponent.cpp  MeshShaderExampleComponent.h  QueryExampleComponent.cpp  XRExampleComponent.cpp
Materials/DynamicMaterialTest/: EmissiveWithCppFunctors.materialtype  EmissiveWithLuaFunctors.materialtype
Passes/ASV/: PassTemplates.azasset
Scripts/: MaterialScreenshotTests.bv.lua  ShadowTest.bv.lua
Shaders/: MaterialEditorTest.materialtype
Shaders/ComprehensiveTestMaterial/: Comprehensive.materialtype
Standalone/: CMakeLists.txt
(+3 files in other folders)
