#
# Copyright (c) Contributors to the Open 3D Engine Project.
# For complete copyright and license terms please see the LICENSE at the root of this distribution.
#
# SPDX-License-Identifier: Apache-2.0 OR MIT
#
#

set(ASV_OPENXR_SAMPLE_ENABLED FALSE CACHE BOOL "Enable the OpenXR Gems and samples in Atom Sample Viewer")

add_subdirectory(Code)
